[project]
name = "release-tool"
dynamic = ["version"]
authors = [{name = "offa"}]
description = "Tool to create project releases."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "GitPython == 3.1.44"
]
keywords = ["project", "release", "cmake", "git"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/offa/release-tool"

[project.scripts]
releasetool = "release_tool.__main__:main"

[project.optional-dependencies]
dev = [
    "pylint == 3.3.6",
    "pytest == 8.3.5",
    "ruff == 0.11.5"
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "release_tool.version.__version__"}

[tool.setuptools.packages.find]
include = ["release_tool"]

